# linear-reduction

./: Dockerfile  Makefile  README.md
Classical-Source/: Makefile  ast.ml  dune  dune-project  interpreter.ml  lexer.mll  main.ml  parser.mly
Comparisons/: comparer.py  expr-compare.py  fib-compare.py
Demos/: arithmetic.ml  create-expression.py  currying.ml  expression.txt  fib-rec.ml  lists_and_products.ml  types.ml
Docs/: linear-reduction.tex  preamble.tex
Optimized-Source/: Makefile  reducer.ml
Paper/: Makefile  beta-reducible-langs.tex  paper-bib.bib  paper.tex  preamble.tex  string-reduction-schemas.tex
Source/: Makefile  reducer.ml
